src/test/deca/context/invalid/created/objet/meth_call3.deca
// description :
//      appel de la methode incorrecte : type de l'argument incorrect
// Resultat
//      Ligne 17 : signature de methode incorrecte
class A {
    int x ;
    int getX() {
        return x ;
    }
    void setX(int x) {
        this.x = x ;
    }
}

{
    A a = new A() ;
    a.setX(1.5) ;
    println("a.getX() = ", a.getX()) ;
}